Fix: missing number characters, nowrap when name is toooo long.

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ html, body {
     text-align: center;
 
     /* size */
+    white-space: nowrap;
     min-width: min(20vw, 200px);
     padding-left:  min(2.0vw, 20px);
     padding-right: min(2.0vw, 20px);
